fixes layout bug introduced in #185

--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,11 @@ a.brand img {
 	vertical-align: baseline;
 }
 
+.navbar-inner .container-narrow {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .content {
 	min-height: 500px;
 }
@@ -61,8 +66,6 @@ a.brand img {
 .container-narrow {
     width: 60%;
     margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
 }
 /* content area has margin */
 .main.container-narrow {
